# rududu-svn

./: README.md
branches/ric-models/lib/: Makefile.am  band.cpp  band.h  bandcodec.cpp  bandcodec.h  dct2d.h  geomcodec.cpp  geomcodec.h  huffcodec.cpp  huffcodec.h  muxcodec.cpp  muxcodec.h  rududucodec.cpp  utils.h  wavelet2d.cpp  wavelet2d.h
branches/ric-models/ric/: ric.cpp
branches/ric-models/utils/: Makefile.am  huffgen.cpp
branches/tarp-exp/: CMakeLists.txt  rududu.kdevelop
branches/tarp-exp/encoder/: CMakeLists.txt  rudenc.cpp
branches/tarp-exp/lib/: CMakeLists.txt  Makefile.am  band.h  bandcodec.cpp  bandcodec.h  bitcodec.cpp  bitcodec.h  geomcodec.h  huffcodec.cpp  huffcodec.h  hufftables.h  image.cpp  imagebuffer.cpp  imagebuffer.h  muxcodec.cpp  muxcodec.h  obmc.cpp  obme.h  utils.h  wavelet2d.cpp  wavelet2d.h
branches/tarp-exp/ric/: CMakeLists.txt  ric.cpp
branches/tarp-exp/utils/: CMakeLists.txt  Makefile.am  huffgen.cpp
ric/: Makefile.am
trunk/: Makefile.am  configure.in  rududu.kdevelop
trunk/encoder/: Makefile.am  ruddec.cpp  rudenc.cpp
trunk/lib/: Makefile.am  band.cpp  band.h  bandcodec.cpp  bandcodec.h  bitcodec.cpp  bitcodec.h  dct2d.cpp  dct2d.h  huffcodec.cpp  huffcodec.h  image.cpp  image.h  imagebuffer.cpp  imagebuffer.h  muxcodec.cpp  muxcodec.h  obmc.cpp  obmc.h  obme.cpp  obme.h  rududucodec.cpp  rududucodec.h  utils.h  wavelet2d.cpp  wavelet2d.h
trunk/ric/: Makefile.am  ric.cpp
trunk/utils/: Makefile.am  sgi2rgb.cpp  testmotion.cpp
