INCLUDES = 
METASOURCES = AUTO
lib_LIBRARIES = librududu.a
librududu_a_SOURCES = band.cpp bandcodec.cpp bitcodec.cpp dct2d.cpp \
	huffcodec.cpp image.cpp muxcodec.cpp obmc.cpp obme.cpp rududucodec.cpp wavelet2d.cpp
noinst_HEADERS = bandcodec.h dct2d.h huffcodec.h image.h obmc.h obme.h \
	rududucodec.h
